--- a/login_local/package.json
+++ b/login_local/package.json
@@ -17,6 +17,7 @@
     "express-session": "^1.15.6",
     "http": "0.0.0",
     "mongodb": "^2.2.33",
+    "mongoose": "^5.0.0-rc2",
     "path": "^0.12.7",
     "serve-static": "^1.13.1"
   }
